# ad

./: Cargo.toml  Makefile  README.md  TODO  build.rs  design.md  input.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  question.md
.github/workflows/: rust.yml
benches/: bench_main.rs
benches/benchmarks/: burntsushi_torture_regex.rs  mod.rs  rsc_pathological_regex.rs
crates/ad_client/: Cargo.toml
crates/ad_client/examples/: demo.rs  event_filter.rs
crates/ad_client/src/: event.rs  lib.rs
crates/ad_event/: Cargo.toml  README.md
crates/ad_event/src/: lib.rs
crates/ninep/: Cargo.toml  LICENSE  README.md
crates/ninep/examples/: acme_test.rs  ad_test.rs  client.rs  server.rs
crates/ninep/src/: client.rs  fs.rs  lib.rs  protocol.rs  server.rs
data/: help-template.txt  help.txt  init-rust.conf  init.conf  plumbing.rules  syntax-test.txt
data/lib/: ad.sh
data/plumbing_tests/messages/invalid/: duplicate-attrs.txt  duplicate-dst.txt  duplicate-ndata.txt  duplicate-src.txt  duplicate-wdir.txt  malformed-attrs-no-eq.txt  malformed-attrs-no-key.txt  malformed-attrs-no-value.txt  missing-ndata.txt  unknown-field.txt
data/plumbing_tests/messages/valid/: all-fields.txt  no-attrs.txt  no-data.txt  no-dst.txt  no-src.txt  no-wdir.txt
data/plumbing_tests/rules/invalid/: arg-isdir-no-value.txt  arg-isfile-no-value.txt  attr-add-no-value.txt  attr-delete-no-value.txt  no-actions.txt  no-patterns.txt  plumb-start-no-value.txt  plumb-to-no-value.txt  unknown-field.txt
data/plumbing_tests/rules/valid/: everything.txt
data/regression/: edit-landing-on-gap-end.txt
data/tour/: helper-examples  helper-programs  index  inspiration  loading  minibuffer  structural-regex2
doc/: 9p.md  address-syntax.md
doc/man/: ad.1
doc/tour/: executing  fsys  helper-examples  helper-programs  index  inspiration  intro  loading  minibuffer  minibuffer-demo.sh  modes  structural-regex  structural-regex2  ui  wrapping-up
examples/: adr.rs  client_example.rs  clipboard.rs  exec.rs  external_commands.rs  fs_demo.rs  ninep_example.rs  regex_bench.rs  regex_demo.rs  rust-check.sh  rust-format-and-check.sh  stdin_test.rs  tokenizer.rs  torture_test.rs
examples/demos/: structural-regex-reformatting.txt
examples/exec_scripts/: result_fns.ad
examples/scripts/: fancy_impl_blocks.ad  impl_blocks.ad  result_fns.ad  rust-check.sh  rust-src-lines.sh
src/: buffer.rs  client.rs  config.rs  editor.rs  input.rs  key.rs  lex.rs  lib.rs  log.rs  main.rs  plumb.rs  protocol.rs  regex.rs  system.rs  term.rs  trie.rs  util.rs  ziplist.rs
src/buffer/: buffers.rs  edit.rs  internal.rs  line.rs  minibuffer.rs  mod.rs
src/buffer/dot/: cur.rs  mod.rs  parse.rs  range.rs  search.rs  util.rs
src/buffer/internal/: README.md  gap_buffer.rs  mod.rs  piece_table.rs
src/dot/: cur.rs  find.rs  mod.rs  range.rs  text_object.rs
src/editor/: actions.rs  built_in_commands.rs  commands.rs  input.rs  minibuffer.rs  mod.rs  mouse.rs  render.rs
src/exec/: addr.rs  cached_stdin.rs  char_iter.rs  expr.rs  mod.rs  parse.rs  stream.rs
src/fsys/: buffer.rs  event.rs  log.rs  message.rs  mod.rs
src/ftype/: lex.rs  mod.rs
src/mode/: insert.rs  mod.rs  normal.rs
src/ninep/: fs.rs  mod.rs  protocol.rs  server.rs
src/regex/: ast.rs  compile.rs  dfa.rs  matches.rs  mod.rs  vm.rs
src/ui/: mod.rs  stack.rs  tui.rs  windows.rs
test-data/burnt-sushi-torture-test/: README.md  torture-test.exec-script  torture-test.haystack  torture-test.pattern
