[package]
name = "ad-editor"
version = "0.1.1"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/ad"
documentation = "https://docs.rs/ad-editor"
readme = "README.md"
description = "An adaptable text editor"
include = [
    "src/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "terminal", "editor", "text-editor", ]
categories = [ "development-tools", "text-editors", "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [ "crates/*" ]

[[bin]]
doc = false
name = "ad"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[[bench]]
name = "bench_main"
harness = false

[dependencies]
ninep = { version = "0.2", path = "crates/ninep" }
libc = "0.2.148"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
simple_test_case = "1.2.0"
criterion = "0.5"
