[package]
name = "ad-editor"
version = "0.1.3"
edition = "2021"
authors = ["sminez <innes.andersonmorrison@gmail.com>"]
license = "MIT"
repository = "https://github.com/sminez/ad"
documentation = "https://docs.rs/ad-editor"
readme = "README.md"
description = "An adaptable text editor"
include = [
    "src/**/*",
    "data/**/*",
    "Cargo.toml",
    "README.md"
]
keywords = [ "terminal", "editor", "text-editor", ]
categories = [ "development-tools", "text-editors", "command-line-utilities" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[workspace]
members = [ "crates/*" ]

[[bin]]
doc = false
name = "ad"
path = "src/main.rs"

[profile.release]
strip = true
lto = true

[[bench]]
name = "bench_main"
harness = false

[dependencies]
ad_event = { version = "0.1.1", path = "crates/ad_event" }
ninep = { version = "0.2", path = "crates/ninep" }
libc = "0.2.159"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "fmt" ] }
unicode-width = "0.2.0"

[dev-dependencies]
simple_test_case = "1.2.0"
criterion = "0.5"
